# devanagari-decipher

./: .gitignore  .npmrc  .replit  README.md  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  render.yaml
.agents/memory/: MEMORY.md  replit-gemini-proxy-path.md
artifacts/sanskrit-translator/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
artifacts/sanskrit-translator/.replit-artifact/: artifact.toml
artifacts/sanskrit-translator/src/: index.css
artifacts/sanskrit-translator/src/components/: layout.tsx
artifacts/sanskrit-translator/src/hooks/: use-translator.ts
artifacts/sanskrit-translator/src/lib/: api.ts
artifacts/sanskrit-translator/src/pages/: history.tsx  home.tsx
attached_assets/: Pasted-Build-a-visually-stunning-production-quality-web-applic_1779939503184.txt
sanskrit_decoder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: check-pnpm.mjs  wait-for.sh
services/python-api/: Dockerfile  main.py  requirements.txt  translations.db
